--- a/TestingSystem_2/.settings/org.eclipse.core.resources.prefs
+++ b/TestingSystem_2/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//src/entity/Exercise.java=UTF-8
 encoding//src/entity/Insert.java=UTF-8
+encoding//src/utils/Scanutil.java=UTF-8
